src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/literal_id_chars.res
Query:
?s ?p #123B

Parsed:
Error: unable to parse query: line 1 column 11: expected end of line, but got 'B'
